# portfolio-juanrubio

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260331_0001_initial_schema.py  20260331_0002_portfolio_personalization.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: contact.py  experience.py  projects.py  stack.py
backend/app/core/: config.py  database.py  errors.py  logging.py
backend/app/models/: __init__.py  base.py  contact_message.py  experience.py  project.py  technology.py
backend/app/schemas/: contact.py  experience.py  project.py  technology.py
backend/app/services/: bootstrap.py  contact.py  portfolio.py  projects.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/api/contact/: route.ts
frontend/app/projects/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/pages/: HomePageClient.tsx  ProjectDetailPageClient.tsx  ProjectsPageClient.tsx
frontend/components/sections/: ContactSection.tsx  EngineeringPrinciples.tsx  ExperienceSection.tsx  HeroSection.tsx  ProjectsSection.tsx  StackContact.tsx  StackSection.tsx
frontend/components/ui/: ContactForm.tsx  SectionHeading.tsx
frontend/lib/: api.ts  fallback-data.ts
frontend/types/: api.ts
