[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juan-rubio-portfolio-api"
version = "0.1.0"
description = "FastAPI backend for Juan Rubio's backend portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "asyncpg>=0.29,<1.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.32,<1.0",
  "psycopg2-binary>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.7,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
